# Calculator

./: .gitignore  CMakeLists.txt  Calculator  README.md  main.cpp  plugin_interface.h
plugins_src/: CMakeLists.txt  funcos.cpp  fundeg.cpp  funln.cpp  funpow.cpp  funsin.cpp
src/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PluginManager.cpp  PluginManager.h  Token.cpp  Token.h  TokenType.h  TokenTypeEnum.h  simple_calculator_tests.cpp  simple_calculator_tests.h  tests.cpp  tests.h
src/expr/: BinaryExpression.cpp  BinaryExpression.h  Expression.h  FunctionExpression.cpp  FunctionExpression.h  NumberExpression.cpp  NumberExpression.h  UnaryExpression.cpp  UnaryExpression.h
